Address comments, small refactor