@@ -107,7 +107,7 @@ public class MoreTimeRequestedCallbackHandler extends CallbackHandler {
 
     @Override
     protected Map<CallbackType, Callback> callbacks() {
-        return ImmutableMap.of(
+        return Map.of(
             CallbackType.ABOUT_TO_START, this::requestMoreTimeViaCaseworker,
             CallbackType.ABOUT_TO_SUBMIT, this::sendNotifications
         );
@@ -130,7 +130,7 @@ public class MoreTimeRequestedCallbackHandler extends CallbackHandler {
         LocalDate newDeadline = responseDeadlineCalculator.calculatePostponedResponseDeadline(claim.getIssuedOn());
 
         List<String> validationResult = this.moreTimeRequestRule.validateMoreTimeCanBeRequested(claim);
-        AboutToStartOrSubmitCallbackResponseBuilder builder = AboutToStartOrSubmitCallbackResponse
+        var builder = AboutToStartOrSubmitCallbackResponse
             .builder();
         if (!validationResult.isEmpty()) {
             return builder
@@ -190,14 +190,14 @@ public class MoreTimeRequestedCallbackHandler extends CallbackHandler {
     }
 
     private Map<String, String> prepareNotificationParameters(Claim claim, LocalDate deadline) {
-        Map<String, String> parameters = new HashMap<>();
-        parameters.put(CLAIM_REFERENCE_NUMBER, claim.getReferenceNumber());
-        parameters.put(CLAIMANT_TYPE, PartyUtils.getType(claim.getClaimData().getClaimant()));
-        parameters.put(CLAIMANT_NAME, claim.getClaimData().getClaimant().getName());
-        parameters.put(DEFENDANT_NAME, claim.getClaimData().getDefendant().getName());
-        parameters.put(RESPONSE_DEADLINE, formatDate(deadline));
-        parameters.put(FRONTEND_BASE_URL, notificationsProperties.getFrontendBaseUrl());
-        return parameters;
+        return Map.of(
+                CLAIM_REFERENCE_NUMBER, claim.getReferenceNumber(),
+                CLAIMANT_TYPE, PartyUtils.getType(claim.getClaimData().getClaimant()),
+                CLAIMANT_NAME, claim.getClaimData().getClaimant().getName(),
+                DEFENDANT_NAME, claim.getClaimData().getDefendant().getName(),
+                RESPONSE_DEADLINE, formatDate(deadline),
+                FRONTEND_BASE_URL, notificationsProperties.getFrontendBaseUrl()
+        );
     }
 
     private CallbackResponse createAndPrintLetter(CallbackParams callbackParams) throws Exception {
